--- a/infra-templates/rbd/0/rancher-compose.yml
+++ b/infra-templates/rbd/0/rancher-compose.yml
@@ -3,7 +3,7 @@
   version: "0.1.0"
   description: |
     Docker volume plugin for Ceph RBD
-  minimum_rancher_version: v1.6.0-rc1
+  minimum_rancher_version: v1.5.9
   questions:
   - variable: RANCHER_DEBUG
     label: Debug Mode
